--- a/Module3 - Homework_Noumedem.ipynb
+++ b/Module3 - Homework_Noumedem.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,11 +18,11 @@
      "output_type": "stream",
      "text": [
       "Enter 1st name: Linda\n",
-      "Enter 2nd name: Christ\n",
+      "Enter 2nd name: Cecile\n",
       "Enter 3rd name: Franck\n",
       "Enter 4th name: Claude\n",
-      "Enter 5th name: Cecile\n",
-      "Names = ['Linda', 'Christ', 'Franck', 'Claude', 'Cecile']\n"
+      "Enter 5th name: Christ\n",
+      "Names = ['Linda', 'Cecile', 'Franck', 'Claude', 'Christ']\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,15 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a color: grey\n",
-      "You found Victor's favorite color\n"
+      "Enter a color: blue\n",
+      "The color is not Victor's favorite color \n"
      ]
     }
    ],
@@ -111,15 +111,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter an exam score: 60\n",
-      "You need to study harder\n"
+      "Enter an exam score: 85\n",
+      "You did great on your exam!\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
     "\n",
     "if score > 100:\n",
     "    print(\"You cannot have an exam score higher than 100\")\n",
-    "elif score == 100 and score >= 75:\n",
+    "elif score <= 100 and score >= 75:\n",
     "    print(\"You did great on your exam!\")\n",
     "elif score < 75:\n",
     "    print(\"You need to study harder\")"
@@ -151,33 +151,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score(param):\n",
+    "    x = param\n",
+    "    if x >= 90 and x <= 100:\n",
+    "        print(\"You exam grade is 'A'!\")\n",
+    "    elif x >= 80 and x <= 89:\n",
+    "        print(\"You exam grade is 'B'!\")\n",
+    "    elif x >= 70 and x <=79:\n",
+    "        print(\"You exam grade is 'c'!\")\n",
+    "    elif x >= 60 and x <= 69:\n",
+    "        print(\"You exam grade is 'D'!\")\n",
+    "    elif x < 60:\n",
+    "        print(\"You exam grade is 'F'!\")\n",
+    "    else:\n",
+    "        print(\"error: the score is not between 0 and 100\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter an exam score: 50\n",
+      "Enter an exam score: 58\n",
       "You exam grade is 'F'!\n"
      ]
     }
    ],
    "source": [
-    "score = int(input(\"Enter an exam score: \"))\n",
+    "prompt = int(input(\"Enter an exam score: \"))\n",
     "\n",
-    "if score >= 90 and score <= 100:\n",
-    "    print(\"You exam grade is 'A'!\")\n",
-    "elif score >= 80 and score <= 89:\n",
-    "    print(\"You exam grade is 'B'!\")\n",
-    "elif score >= 70 and score <=79:\n",
-    "    print(\"You exam grade is 'c'!\")\n",
-    "elif score >= 60 and score <= 69:\n",
-    "    print(\"You exam grade is 'D'!\")\n",
-    "elif score < 60:\n",
-    "    print(\"You exam grade is 'F'!\")\n",
-    "else:\n",
-    "    print(\"error: the score is not between 0 and 100\")"
+    "score(prompt)"
    ]
   },
   {
